# JinkoRobotics

./: .gitignore  README.md  pruebas.js
jinko_api/: index.js  package-lock.json  package.json
jinko_robot_ros/DETECCIÓN DE IMAGENES/jinko_image_detector/: CMakeLists.txt  package.xml
jinko_robot_ros/DETECCIÓN DE IMAGENES/jinko_image_detector/launch/: jinko_image_detector.launch
jinko_robot_ros/DETECCIÓN DE IMAGENES/jinko_image_detector/src/: jinko_image_detector.py
jinko_robot_ros/ESCENARIO GAZEBO/ESCENARIO_GAZEBO/: CMakeList.txt  package.xml
jinko_robot_ros/ESCENARIO GAZEBO/world_sala_de_juegos/: CMakeLists.txt  package.xml
jinko_robot_ros/ESCENARIO GAZEBO/world_sala_de_juegos/launch/: turtlebot3_sala_de_juegos.launch
jinko_robot_ros/ESCENARIO GAZEBO/world_sala_de_juegos/worlds/: me_cago_en_dios.world  sala_de_juegos.world  sala_de_juegos2.world  sala_de_juegos3.world  sala_de_juegos4.world
jinko_robot_ros/NAVEGACION A UN PUNTO/NAVEGACION_A_UN_PUNTO/: CMakeList.txt  package.xml
jinko_robot_ros/NAVEGACION A UN PUNTO/jinko_navigation_service/: CMakeLists.txt  package.xml
jinko_robot_ros/NAVEGACION A UN PUNTO/jinko_navigation_service/src/: jinko_navigation_service_server.html  jinko_navigation_service_server.py
jinko_robot_ros/NAVEGACION A UN PUNTO/jinko_service_msg/: package.xml
jinko_robot_ros/NAVEGACION AUTONOMA/NAVEGACION_AUTONOMA/: package.xml
jinko_robot_ros/NAVEGACION AUTONOMA/mapas/anteriores/: mapaSprint1.yaml  mapaSprint12.yaml  zona2.pgm
jinko_robot_ros/NAVEGACION AUTONOMA/my_navigation_stack/: package.xml
jinko_robot_ros/NAVEGACION AUTONOMA/my_navigation_stack/launch/: my_navigation_launch.launch
jinko_robot_ros/NAVEGACION AUTONOMA/my_navigation_stack/rviz/: my_config.rviz
jinko_robot_ros/NAVEGACION AUTONOMA/provide_map/: mapaSprint.pgm  package.xml
jinko_robot_ros/jinko_navigation_service/src/: jinko_navigation_service_server.py
jinko_robot_ros/jinko_service_client/: CMakeLists.txt  package.xml
jinko_robot_ros/jinko_service_client/launch/: jinko_service_client.launch
jinko_robot_ros/jinko_service_client/src/: jinko_navigation_service_client.py
jinko_robot_ros/jinko_service_msg/: CMakeLists.txt
jinko_robot_ros/jinko_service_msg/srv/: jinko_service_msg.srv
jinko_robot_ros/juegos_tea/: README.md  juegos_tea.html
jinko_robot_ros/juegos_tea/jinko_games/: CMakeLists.txt  package.xml
jinko_robot_ros/juegos_tea/jinko_games/launch/: calculator_game_launch.launch  jinko_tea_games.launch
jinko_robot_ros/juegos_tea/jinko_games/src/: calculator_game.py  jinko_tea_games.py
jinko_robot_ros/juegos_tea/jinko_games_message/: CMakeLists.txt  package.xml
jinko_robot_ros/juegos_tea/jinko_games_message/srv/: jinko_games_message.srv
jinko_robot_ros/juegos_tea/juegos_tea/: CMakeLists.txt  package.xml
jinko_robot_ros/mapas/: sala_de_juegos.pgm  sala_de_juegos.yaml
jinko_robot_ros/mapas/anteriores/: mapaSprint1.pgm  mapaSprint12.pgm  zona2.yaml
jinko_robot_ros/my_navigation_stack/: CMakeLists.txt
jinko_robot_ros/my_navigation_stack/launch/: my_navigation_launch.launch
jinko_robot_ros/provide_map/: mapaSalaDeJuegos.yaml  mapaSprint.yaml
jinko_robot_ros/provide_map/launch/: provide_map.launch
jinko_robot_ros/provide_map/param/: tb3_house.map.pgm
jinko_robot_ros/world_sala_de_juegos/src/: sala_de_juegos.world
jinko_robot_ros/world_sala_de_juegos/src/turtlebot3_sala_de_juegos/: model.config
jinko_robot_ros/world_sala_de_juegos/worlds/: sala_de_juegos.world
jinkobot/: capacitor.config.json  config.xml  ionic.config.json  package-lock.json  package.json  tslint.json
jinkobot copia/: ionic.config.json  package.json
jinkobot copia/src/: index.html
jinkobot/android/: local.properties
jinkobot/android/app/: build.gradle
jinkobot/android/gradle/wrapper/: gradle-wrapper.properties
jinkobot/ios/App/App/: Info.plist
jinkobot/ios/App/App.xcodeproj/: project.pbxproj
jinkobot/src/: global.scss  index.html
jinkobot/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
jinkobot/src/app/models/: Exercise.ts  IRobot.ts
jinkobot/src/app/services/: games.service.ts  ros.service.ts  storage.service.ts
jinkobot/src/theme/: variables.scss
(+75 files in other folders)
